--- a/src/app/protected/creator/creator.less
+++ b/src/app/protected/creator/creator.less
@@ -1,2 +1,11 @@
 .creator {
+  height: 100%;
+
+  md-tab-data {
+    opacity: 1;
+    display: table;
+    right: 0;
+    left: initial;
+    z-index: 20;
+  }
 }
