--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,5 +1,6 @@
 @import (inline) "../../vendor/angular-loading-bar/build/loading-bar.css";
 @import (inline) "../../vendor/angular-material/angular-material.css";
 @import '../app/app.less';
+@import '../app/protected/creator/creator.less';
 @import '../app/protected/protected.less';
 @import '../app/public/public.less';
