--- a/src/app/protected/creator/creator.less
+++ b/src/app/protected/creator/creator.less
@@ -1,6 +1,10 @@
 .creator {
   height: 100%;
 
+  #right-sidenav {
+    min-width: 400px;
+  }
+
   md-tab-data {
     opacity: 1;
     display: table;
