--- a/src/app/protected/creator/creator.tpl.html
+++ b/src/app/protected/creator/creator.tpl.html
@@ -1,45 +1,49 @@
 <div layout="row" class="creator" ng-cloak>
 
-    <md-content flex layout-padding>
+    <div lang="row" flex>
 
-        <div layout="column" layout-align="top center">
-            <div>
-                <md-button ng-click="toggleRight()"
-                           ng-hide="isOpenRight()"
-                           class="md-primary">
-                    Toggle right
-                </md-button>
-            </div>
-        </div>
+    </div>
 
-        <div flex></div>
+    <md-button ng-click="toggleRight()"
+               ng-hide="isRightNavLockedOpen"
+               class="md-primary md-icon-button md-fab-bottom-right">
+        <md-icon md-font-icon="material-icons" aria-label="Open right nav">menu</md-icon>
+    </md-button>
 
-    </md-content>
-
-    <md-sidenav id="right-sidenav" class="md-sidenav-right md-whiteframe-4dp" md-component-id="right"
+    <md-sidenav id="right-sidenav"
+                class="md-sidenav-right md-whiteframe-4dp"
+                md-component-id="right"
                 md-is-locked-open="isRightNavLockedOpen">
 
         <md-tabs class="md-accent" md-selected="data.selectedIndex">
             <md-button class="md-icon-button" ng-click="isRightNavLockedOpen=!isRightNavLockedOpen">
-                <md-icon md-font-icon="material-icons" aria-label="Pin right nav">lock</md-icon>
-            </md-button>
-
-            <md-button class="md-icon-button" ng-click="toggleRight()">
-                <md-icon md-font-icon="material-icons" aria-label="Close right nav">close</md-icon>
+                <md-icon md-font-icon="material-icons" aria-label="Pin right nav">
+                    {{isRightNavLockedOpen ? 'lock' : 'lock_open'}}
+                </md-icon>
             </md-button>
 
             <md-tab id="tab1">
-                <md-tab-label>Item One</md-tab-label>
+                <md-tab-label>
+                    <md-icon md-font-icon="material-icons" aria-label="Structure">extension</md-icon>
+                </md-tab-label>
                 <md-tab-body>
-                    View for Item #1 <br/>
-                    data.selectedIndex = 0;
+                    Structure items
                 </md-tab-body>
             </md-tab>
-            <md-tab id="tab5">
-                <md-tab-label>Item Two</md-tab-label>
+            <md-tab id="tab2">
+                <md-tab-label>
+                    <md-icon md-font-icon="material-icons" aria-label="Decorators">dns</md-icon>
+                </md-tab-label>
                 <md-tab-body>
-                    View for Item #5 <br/>
-                    data.selectedIndex = 4;
+                    Decorators for the views
+                </md-tab-body>
+            </md-tab>
+            <md-tab id="tab3">
+                <md-tab-label>
+                    <md-icon md-font-icon="material-icons" aria-label="Data">subtitles</md-icon>
+                </md-tab-label>
+                <md-tab-body>
+                    Data handling components
                 </md-tab-body>
             </md-tab>
         </md-tabs>
